roles/k8s/files/hedgedoc/hedgedoc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
  namespace: hedgedoc
  labels:
    app: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
      - name: hedgedoc
        image: ghcr.io/linuxserver/hedgedoc:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: hedgedoc-pv
          mountPath: /config
          subPath: config
      volumes:
      - name: hedgedoc-pv
        persistentVolumeClaim:
          claimName: hedgedoc
---
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
  namespace: hedgedoc
  labels:
    app: hedgedoc
spec:
  type: ClusterIP
  selector:
    app: hedgedoc
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc
  namespace: hedgedoc
  labels:
    app: hedgedoc
  annotations:
    cert-manager.io/cluster-issuer: kncyber
spec:
  tls:
  - secretName: kncyber-tls
    hosts:
    - "kncyber.pl"
    - "*.kncyber.pl"
  rules:
  - host: md.kncyber.pl
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hedgedoc
            port:
              name: http
